# innofile

./: Cargo.toml  LICENSE-MIT  Makefile  README.md
crates/innofile/: Cargo.toml
crates/innofile/examples/: test_sync_api.rs  test_tokio_api.rs
crates/innofile/src/: arrow.rs  error.rs  fs.rs  io.rs  lib.rs  tokio.rs  utils.rs
crates/innofile/src/sync/: arrow.rs  fs.rs  io.rs
crates/innofile/src/sync/arrow/: csv.rs  json.rs  orc.rs  parquet.rs
crates/innofile/src/sync/fs/: local.rs  object_store.rs
crates/innofile/src/tokio/: arrow.rs  fs.rs  io.rs
crates/innofile/src/tokio/arrow/: csv.rs  json.rs  orc.rs  parquet.rs
crates/innofile/src/tokio/fs/: local.rs  object_store.rs
